# lglr

./: .gitignore  README.md  lglr_API.insomnia_collection.json  lglr_API.postman_collection.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py  settings.py
backend/app/api/: __init__.py  logs.py  rpa.py  summaries.py  transactions.py  websocket.py
backend/app/domain/: __init__.py  correlation.py  events.py  models.py
backend/app/infra/: __init__.py  db.py  event_log.py  events.py  logging.py  openai_client.py  postgres.py  queue.py
backend/app/repos/: __init__.py  in_memory.py  ports.py  postgres.py  sqlite.py
backend/app/rpa/: __init__.py  extractor.py  wikipedia_bot.py
backend/app/services/: summarize.py
backend/app/worker/: __init__.py  handler.py
backend/tests/: conftest.py
backend/tests/e2e/: __init__.py  test_rpa_wikipedia.py
backend/tests/fixtures/: __init__.py  wikipedia_sample.html
backend/tests/integration/: __init__.py  test_async_processing.py  test_redis_queue.py
backend/tests/integration/api/: __init__.py  test_health.py  test_summaries.py  test_transactions.py  test_websocket.py
backend/tests/integration/persistence/: __init__.py  test_postgres.py  test_sqlite.py
backend/tests/unit/: __init__.py  test_domain.py  test_events.py  test_queue.py  test_repos_memory.py  test_rpa_extractor.py  test_services.py  test_websocket.py  test_worker.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
(+16 files in other folders)
